--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -131,3 +131,4 @@ $secondary: $blue;
 // 4. Import the rest of Bulma
 @import '../../node_modules/bulma/bulma.sass';
 @import './scss/fertility.scss';
+@import './scss/price-section.scss';
